--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -17,12 +17,12 @@ sections:
   - page
 upload_dir: static/uploads
 public_path: "/uploads"
-front_matter_path: "/uploads"
+front_matter_path: ""
 use_front_matter_path: false
 file_template: ":filename:"
+custom_preview: true
 build:
-  preview_command: npm run build
-  publish_command: gatsby build
+  preview_command: npm run forestry:preview
   preview_output_directory: public
   output_directory: public
   instant_preview_command: gatsby develop -H 0.0.0.0 -p 8080
