--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
+    "forestry:preview": "gatsby develop -p 8080 -H 0.0.0.0"
   }
 }
